# Xxus

./: .gitignore  .taurignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json  pnpm-lock.yaml  xxus.db
assets/: styles.css  tailwind.css
assets/components/home/: home.css  home.css.map  home.scss  input.css  input.css.map  input.scss  list.css  list.css.map  list.scss  work_schedule.css  work_schedule.css.map  work_schedule.scss
assets/components/sidebar/: sidebar.css  sidebar.css.map  sidebar.scss
crate/payroll-core/: Cargo.toml
crate/payroll-core/src/: lib.rs
crate/shared-types/: Cargo.toml
crate/shared-types/src/: lib.rs  paypay.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250728_133619_init_cash_flows.rs
shared-types/src/: lib.rs
src/: app copy.rs  app.rs  main.rs
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json  xxus.db
src-tauri/src/: lib.rs  main.rs
src-tauri/src/csv/: import_csv.rs
src-tauri/src/data_access/: data_access.rs  mod.rs  setting_default_value.rs  work_schedule.rs
src-tauri/src/entity/: cash_flow.rs  mod.rs  post.rs  prelude.rs
src/components/: mod.rs
src/components/home/: home.rs  home_panel.rs  import_csv.rs  input.rs  list.rs  mod.rs
src/components/layout/: main_layout.rs
src/components/settings/: mod.rs  settings.rs  settings_panel.rs
src/components/sidebar/: sidebar.rs  sidebar_panel.rs
src/components/work_schedule/: calc_hourly_wage.rs  mod.rs  overlay.rs  salary_preview.rs  setting_default_value.rs  timesheet_month_actuals.rs  work_schedule.rs  work_schedule_panel.rs  work_schedule_route.rs
src/enums/: enum_global.rs  mod.rs
src/structs/: structs.rs
