[package]
name = "xxus-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-logger = "0.6"
wasm-bindgen = {version = "0.2.100", features = ["serde-serialize", "serde"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
dioxus-router = "0.6.3"
dioxus-material-icons = "3"
dotenv = "0.15.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", default-features = false, features = ["core", "event"] }
shared-types = { path = "./shared-types" }
serde_json = "1.0.142"

[workspace]
members = [ "shared-types","src-tauri"]

[features]
ssr = []

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.dependencies]
serde-wasm-bindgen = "0.6.5"
