[package]
name = "xxus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xxus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.0", features = ["full"] }
# sea-orm = { version = "1.1.14", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
once_cell = "1.21.3"
dotenv = "0.15.0"
# Migrate from rusqlite to sqlx (async). rusqlite removed.
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
shared-types = { path = "../crate/shared-types" }
chrono = "0.4.41"
dirs = "5"

[features]
ssr = []
tauri = []

# デバッグ用設定
[profile.dev]
debug = true
opt-level = 0
overflow-checks = true

[profile.release]
debug = false
opt-level = 3
